objects/vlocity_cmt__ProductPublishEvent__c.object
<CustomObject>
    <description>Represents a publishing event that performs a create or update action of product from source system to target system</description>
    <fields>
        <fullName>vlocity_cmt__ActionName__c</fullName>
        <description>The name of the action performed by the event in the target system. For example, to create or update a product.</description>
        <label>Action Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ErrorInformation__c</fullName>
        <description>The error log about the failed action.</description>
        <label>Error Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that&apos;s associated with the event.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Publish Events</relationshipLabel>
        <relationshipName>ProductPublishEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceSystemEventDateTime__c</fullName>
        <description>The date and time of the action that&apos;s performed on the source system for the product.</description>
        <label>Source System Event Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>Specifies the status of the event.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetSystemEventDateTime__c</fullName>
        <description>The date and time of the action that&apos;s performed on the target system for the product.</description>
        <label>Target System Event Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetSystemName__c</fullName>
        <description>The name of the target system where the action is performed.</description>
        <externalId>true</externalId>
        <label>Target System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetSystemProductIdentifier__c</fullName>
        <description>The identifier of the product in the target system where the action is performed.</description>
        <externalId>true</externalId>
        <label>Target System Product Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Publish Event</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All_ProductPublishEvents</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Product__c</columns>
        <columns>vlocity_cmt__TargetSystemName__c</columns>
        <columns>vlocity_cmt__TargetSystemProductIdentifier__c</columns>
        <columns>vlocity_cmt__Status__c</columns>
        <columns>vlocity_cmt__ActionName__c</columns>
        <columns>vlocity_cmt__SourceSystemEventDateTime__c</columns>
        <columns>vlocity_cmt__TargetSystemEventDateTime__c</columns>
        <columns>vlocity_cmt__ErrorInformation__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Product Publish Events</label>
    </listViews>
    <nameField>
        <label>Product Publish Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Publish Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>